# gstreamer-sample-metadata

./: CMakeLists.txt  README.md  gstdetectionsmeta.cpp  gstdetectionsmeta.h  gsttrackedmeta.cpp  gsttrackedmeta.h
